--- a/glossary_and_acronyms.tex
+++ b/glossary_and_acronyms.tex
@@ -3,7 +3,7 @@
 \newacronym{AMCL}{AMCL}{Augmented Monte Carlo Localization}
 \newacronym{AMCL6D}{AMCL6D}{Augmented Monte Carlo Localization in six dimensions}
 \newacronym{pdf}{PDF}{probability density function}
-\newacronym{cdf}{CDF}{cumulative distribution functions}
+\newacronym{cdf}{CDF}{cumulative distribution function}
 \newacronym{knn}{k-NN}{k-Nearest Neighbors}
 \newacronym{CGAL}{CGAL}{Computational Geometry Algorithms Library}
 \newacronym{AABB}{AABB tree}{Axis-Aligned Bounding Boxes tree}
@@ -11,3 +11,4 @@
 \newacronym{kdtree}{k-d tree}{k-dimensional tree}
 \newacronym{FLANN}{FLANN}{Fast Library for Approximate Nearest Neighbors}
 \newacronym{ICP}{ICP}{Iterative Closest Point}
+\newacronym{lvr}{LVR Toolkit}{Las Vegas Reconstruction Toolkit}
