--- a/introduction.tex
+++ b/introduction.tex
@@ -7,21 +7,22 @@
 
 Let's assume for a second you get kidnapped: Some dark clothed men blindfold you, drag you into their car and drive around in confusing circles before they release you at a completely different place. Luckily you get your hand on a hand radio and when the bad guys leave you to die, you are able to tell your friend (luckily a ham radio operator) where you are, so that she can pick you up: You look around and tell her what you see. The big tree over there, the coffee shop at that corner. Your friend finds several similar locations on her map, so she asks you to go a few more steps and tell her what you see. After telling her about the bakery next to the coffee shop and a small park across the street she is finally able to locate you, jumps into the car and fetches you.
 
-This scenario is quite common for mobile robots. In the annual RoboCup, a scientific competition in which robots play football\cite[]{robocup}, robots are often relocated by a referee\cite[p.~259]{ThrunBurgardFox:2005}. They then have to realize that they have been relocated and determine their new position to continue efficient play. If there are ambiguous possible positions, they can simply move to get rid uncertainties, as described in the example above.
+This scenario is quite common for mobile robots. In the annual RoboCup, a scientific competition in which robots play football\cite{robocup}, robots are often relocated by a referee\cite{ThrunBurgardFox:2005}. They then have to realize that they have been relocated and determine their new position to continue efficient play. If there are ambiguous possible positions, they can simply move to get rid uncertainties, as described in the example above.
 
 A similar situation occurs for every mobile robot which is turned on. If they are supposed to drive around a factory (or a floor in the computer science department) they first have to find out where they are. This is a little bit easier than the first scenario, since a robot doesn't have to find out that it was relocated---it is sufficient to find the current position.
 
-The situation of relocating a robot and thus forcing it to redetermine its position is called \emph{kidnapped robot problem}\cite[p.~194]{ThrunBurgardFox:2005}. It is an extension to the \emph{global localization problem}. The global localization problem just needs to find the initial pose, while the kidnapped robot first has to realize its kidnapping---it might still assume that it is right on its original course while it was carried away.
+The situation of relocating a robot and thus forcing it to redetermine its position is called \emph{kidnapped robot problem}\cite{ThrunBurgardFox:2005}. It is an extension to the \emph{global localization problem}. The global localization problem just needs to find the initial pose, while the kidnapped robot first has to realize its kidnapping---it might still assume that it is right on its original course while it was carried away.
 
 
 \section{Idea and motivation}
 
-There are several algorithms which solve localization problems in two dimensional maps---local or global. A very popular algorithm, which is also capable of solving the kidnapped robot problem, is the Monte Carlo Localization\cite[]{DellaertFoxBurgardThrun:1999}. One variant, the \gls{AMCL}, can be found in \citet{ThrunBurgardFox:2005}.
+There are several algorithms which solve localization problems in two dimensional maps locally or globally. A very popular algorithm, which is also capable of solving the kidnapped robot problem, is Monte Carlo Localization\cite{DellaertFoxBurgardThrun:1999}. One variant, the \gls{AMCL}, can be found in \emph{Probabilistic Robotics}\cite{ThrunBurgardFox:2005}.
 
-For this algorithm as well as for other applications in robotics, environments are represented as 2D maps. This is useful for many real-life applications, since many robots operate in more or less flat environments. Although it is sufficient for many environments to represent them as a 2D map, environments with altitude differences (e.g. factories with ramps or normal houses with stairs) are hard to represent this way. Also robots which are capable of moving in more than two dimensions, e.g. flying robots, could benefit from more information than just 2D maps.
-
+For this algorithm, environments are represented as 2D maps. This is useful for many real-life applications, since many robots operate in more or less flat environments. Although it is sufficient for most environments to represent them in a 2D map, environments with altitude differences (e.g. factories with ramps or normal houses with stairs) are hard to represent this way. Also robots which are capable of moving in more than two dimensions, e.g. flying robots, could benefit from more information than just 2D maps.
 However, there are few approaches to locate robots in 3D environments. Therefore I will derive an algorithm based on the classic \gls{AMCL} to localize a robot in an arbitrary 3D environment.
 
-With the extension to a third dimension the environment should offer fewer ambiguous locations than two dimensional ones, since there are more features to detect and to be compared with the map. This should lead to a faster convergence towards the real pose of the robot. Additionally it should be possible to locate robots which are toppled over, turned upside down or flying around---basically any kind of pose in the three dimensional space should be detectable.
+With the extension to a third dimension the environment should offer fewer ambiguous locations than two dimensional ones, since there are more features to detect and to be compared with the map. %This should lead to a faster convergence towards the real pose of the robot. 
+\todo[inline]{find out and change accordingly}
+Additionally it should be possible to locate robots which are toppled over, turned upside down or flying around---basically any kind of pose in the three dimensional space should be detectable.
 
 \end{document}
