--- a/thesis_bibliography.bib
+++ b/thesis_bibliography.bib
@@ -74,15 +74,30 @@
 }
   
 @article{flann_pami_2014,
-  title={Scalable Nearest Neighbor Algorithms for High Dimensional Data},
-  author={Marius Muja and David G. Lowe},
-  journal={Pattern Analysis and Machine Intelligence, IEEE Transactions on},
-  volume={36},
-  year={2014},
-  publisher={IEEE}
+  title     = {Scalable Nearest Neighbor Algorithms for High Dimensional Data},
+  author    = {Marius Muja and David G. Lowe},
+  journal   = {Pattern Analysis and Machine Intelligence, IEEE Transactions on},
+  volume    = {36},
+  year      = {2014},
+  publisher = {IEEE}
 }
   
-  
+@conference{ros:2009,
+	title       = {ROS: an open-source Robot Operating System},
+	booktitle   = {ICRA Workshop on Open Source Software},
+	year        = {2009},
+	attachments = {http://www.willowgarage.com/sites/default/files/icraoss09-ROS.pdf},
+	author      = {Morgan Quigley and Ken Conley and Brian P. Gerkey and Josh Faust and Tully Foote and Jeremy Leibs and Rob Wheeler and Andrew Y. Ng}
+}
+
+@phdthesis{Wiemann:2013,
+  title   = {Automatische Generierung dreidimensionaler Polygonkarten für mobile Roboter},
+  author  = {Thomas Wiemann},
+  year    = 2013,
+  note    = {urn:nbn:de:gbv:700-2013050710827},
+  school  = {Universität Osnabrück},
+  address = {Osnabrück}
+}
   
   
   
