--- a/future.tex
+++ b/future.tex
@@ -4,7 +4,7 @@
 
 \subsection*{Dynamic respawn}
 
-One element of \gls{AMCL} was left out in \gls{AMCL6D}: The dynamic respawn rate of samples (cf. \citet{ThrunBurgardFox:2005}). Depending on how high the belief for specific poses is, \gls{AMCL} spawns more or less new pose samples. This allows for a more fine grained control of where to regenerate new samples and also changes the computational time needed for each iteration. If the belief for some pose samples is very high, less samples need to be checked in total until there are some far away from the good samples with like results. The less samples are maintained, the less computational effort is needed. This is especially for the ray tracer.
+One element of \gls{AMCL} was left out in \gls{AMCL6D}: The dynamic respawn rate of samples (cf. \cite{ThrunBurgardFox:2005}). Depending on how high the belief for specific poses is, \gls{AMCL} spawns more or less new pose samples. This allows for a more fine grained control of where to regenerate new samples and also changes the computational time needed for each iteration. If the belief for some pose samples is very high, less samples need to be checked in total until there are some far away from the good samples with like results. The less samples are maintained, the less computational effort is needed. This is especially for the ray tracer.
 
 \subsection*{Ray tracer}
 
@@ -16,9 +16,10 @@ Another very important factor is the evaluation function. As in other applicatio
 
 \subsection*{Multiple sensors}
 
-If all these changes are done and \gls{AMCL6D} turns out to work, there are still many things to do. First of course it should be tested on a real robot and not only in simulations. After that it is possible to extend \gls{AMCL6D} further, for example by adding a second sensor which is directed to another direction than the first. This could help to reduce ambiguities and thus lead to faster convergence, but also introduces more data to process. This leads to the problem that sometimes better sensors are difficult to handle due to their different kind of data\cite[]{Smithers:1994}---or in this case more because of the amount of data.
+If all these changes are done and \gls{AMCL6D} turns out to work, there are still many things to do. First of course it should be tested on a real robot and not only in simulations. After that it is possible to extend \gls{AMCL6D} further, for example by adding a second sensor which is directed to another direction than the first. This could help to reduce ambiguities and thus lead to faster convergence, but also introduces more data to process. This leads to the problem that sometimes better sensors are difficult to handle due to their different kind of data\cite{Smithers:1994}---or in this case more because of the amount of data.
 
 \section*{Conclusion}
 
 As it turned out, \gls{AMCL6D}, as implemented for this thesis, is not yet very effective. However, there is still much room left for improvement and changes, and since localization in continuous 3D maps will stay an important topic in the future it is worth pursuing this or similar approaches. 
+
 \end{document}
