--- a/localization.tex
+++ b/localization.tex
@@ -5,11 +5,9 @@
 
 \section{Robot localization}
 
-Robot localization is the process of determining a robot's pose in a known environment. A common application for it is to find the starting position for planning algorithms. 
+Robot localization is the process of determining a robot's pose in a known environment. A common application for it is to find the starting position for planning algorithms. Thrun et al. distinguish between three different kinds of localization problems: \emph{Local localization}, \emph{global localization}, and the \emph{kidnapped robot problem}\cite{ThrunBurgardFox:2005}. The local localization problem keeps track of the robot's pose from a known initial pose and is considered the easiest problem of the three, since the error rate in position tracking is small and efficient algorithms exist to reduce it even further, like the Kalman filter and its derivatives\cite{ThrunBurgardFox:2005}. The global localization problem deals with finding the pose in a map without knowing the initial pose. It is an extension to the local localization problem and more difficult. But once the robot has found its pose, the problem degenerates into a local localization problem. However, when the robot is relocated by someone, it loses track of its pose. This is the kidnapped robot problem, which is the most difficult of the three localization problems.
 
-\citet{ThrunBurgardFox:2005} distinguish between three different kinds of localization problems: \emph{Local localization}, \emph{global localization}, and the \emph{kidnapped robot problem}. The local localization problem keeps track of the robot's pose from a known initial pose and is considered the easiest problem of the three, since the error rate in position tracking is small and efficient algorithms exist to reduce it even further, like the Kalman filter and its derivatives\cite[p.~40ff]{ThrunBurgardFox:2005}. The global localization problem deals with finding the pose in a map without knowing the initial pose. It is an extension to the local localization problem and more difficult. But once the robot has found its pose the problem degenerates into a local localization problem. However when the robot is relocated by someone and turns out to be in a different spot than before, it loses track of its pose. This is the kidnapped robot problem, solving which is the most difficult among the three localization problems.
-
-All three problems have in common that they need a suitable environment representing a map of the robot's whereabouts. There is a similar class of problems which are referred to as \gls{SLAM} problems. In these scenarios there is no map given, which makes the problems even more difficult. 
+All three problems have in common that they need a suitable environment representation, a map of the robot's whereabouts. There is a similar class of problems which are referred to as \gls{SLAM} problems. In these scenarios there is no prior map given, which makes the problems even more difficult. 
 
 %The algorithm presented in this thesis will deal with the global localization problem and will also be able to recover from a kidnapped robot situation.
 
@@ -27,7 +25,7 @@ P(Y) = \sum\limits_i \p[P]{Y}{x_i}
 In a continuous approach the sum is replaced by an integral, but for the algorithm in this thesis the discrete version is sufficient. $P(X)$ is the prior, a previous assumption.
 %, defaulting to a uniformly \gls{iid} random variable. 
 The likelihood, the last factor needed for the calculations, can be found in $\p[P]{Y}{X}$. One can read it as the \emph{probability of $Y$ given $X$}, that means the probability of event $Y$ when event $X$ was observed. 
-The likelihood is a very important part of the algorithm and will be described in details with \algRef{alg:eval}. All together Bayes' theorem is used to calculate the posterior probability of $X$ given $Y$. That is the probability that event $X$ happens when event $Y$ is observed. In other words this means that the current probability for $X$ given $Y$ is derived by calculating how likely event $Y$ is, given event $X$ regarding $X$'s sole probability. 
+The likelihood is a very important part of the algorithm and will be described in detail in \algRef{alg:eval}. All together Bayes' theorem is used to calculate the posterior probability of $X$ given $Y$. That is the probability that event $X$ happens when event $Y$ is observed. In other words this means that the current probability for $X$ given $Y$ is derived by calculating how likely event $Y$ is, given event $X$ regarding $X$'s sole probability. 
 
 It should be noted that throughout the rest of this thesis prior and posterior probabilities will be called prior and posterior beliefs, respectively. This terminology has a simple reason: Although a robot does not have beliefs as we use the word in terms of human thoughts, it fits the context better. Probability might imply that the algorithm would try to \emph{predict} the robot's future position---belief on the other hand describes a theoretical possible \emph{current} state.
 
@@ -81,8 +79,8 @@ After the initialization the robot uses its sensor to search for a door. It find
 
 A repeated measurement would add little information to the robot's belief. So the best solution to get more information is to move around a little and check for doors again. This can be seen in \figRef{fig:markov_localization_one_dimension}(c). Especially noteworthy is that the $bel(x)$ distribution is flattened a little bit. This is done to account for inaccuracies in the movement of robots.
 
-During the next time step \formRef{eq:door_bayes} will be used again, with the new normalized belief and a new measurement. Since the robot again senses a door the robot first assigns high likelihoods for the doors, then it calculates the posterior belief. This leads to a considerable high value for the position close to the second door, we say the pose estimation converges to the real value. 
+During the next time step \formRef{eq:door_bayes} will be used again, with the new normalized belief and a new measurement. Since the robot again senses a door the robot first assigns high likelihoods for the doors, it then calculates the posterior belief. This leads to a considerable high value for the position close to the second door, we say the pose estimation converges to the real value. 
 
-After the next movement the $bel(x)$ distribution flattens a little bit again, however it should get higher probabilities again when the robot senses no door at all.
+During the next movement the $bel(x)$ distribution flattens again, until the robot senses a new door. With the new information about this landmark the robot will be able to update his beliefs accordingly.
 
 \end{document}
