--- a/stateoftheart.tex
+++ b/stateoftheart.tex
@@ -1,11 +1,11 @@
 \documentclass[Thesis.tex]{subfiles}
 \begin{document}
 
-\chapter{State of the art: grids and samples}
+\chapter{State of the art}
 % name EKF, etc.
-The distinction between local localization, global localization and the kidnapped robot problem is often not enough to describe localization problems. \citet{ThrunBurgardFox:2005} also distinguish algorithms in two other categories: Which type of environment is approached and how it is approached.
+The distinction between local localization, global localization and the kidnapped robot problem is often not enough to describe localization problems. Thrun et al.\ also distinguish algorithms in two other categories: Which type of environment is approached and how it is approached\cite{ThrunBurgardFox:2005}.
 
-Environments can either be static or dynamic. That means they either stay the same or they change over time. It can easily be guessed that dynamic environments are harder to navigate---however, most real-life applications in robotics deal with dynamic environments, some examples include opening or closing doors, people walking through the robot's path and many more. Even changes in the environmental lighting can cause the robot's sensor data to yield very different results. 
+Environments can either be static or dynamic. That means they either stay the same or they change over time. It can easily be guessed that dynamic environments are harder to navigate. Still most real-life applications in robotics deal with dynamic environments, some examples include opening or closing doors, people walking through the robot's path and many more. Even changes in the environmental lighting can cause the robot's sensor data to yield very different results. 
 
 The last metric, the kind of approach chosen, is to distinguish between active and passive approaches. A passive approach is used whenever a robot has some tasks to do and just keeps track of its position while doing them. An active approach controls the robot towards poses which should help in improving the pose hypothesis (the best guess pose), thus reducing the localization error.
 
@@ -13,14 +13,14 @@ Depending on the different characteristics of localization problems there are di
 
 \section{Grid based localization}
 
-
+\todo[inline]{one or two examples}
 
 \section{Sample based localization}
 
-\todo[inline]{this}
+\todo[inline]{one or two examples}
 
 \subsection{Augmented Monte Carlo Localization in two dimensions}
-The \gls{AMCL} is the algorithm on which the \gls{AMCL6D} is based. 
+\todo[inline]{Notes that AMCL6D is based on AMCL}
 
 
 \end{document}
